// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<div>
   
  <span
    class="s-y8aqkkbOYo4q overlay"
    role="tab"
    tabindex="0"
  >
    <div
      class="content s-y8aqkkbOYo4q"
    >
      <span
        class="artwork s-y8aqkkbOYo4q"
      />
       
      <p
        class="controls s-y8aqkkbOYo4q"
      >
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="play"
        >
          <i
            class="icons i-mdi-play s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="enqueue"
        >
          <i
            class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
      </p>
    </div>
     
    <header
      class="s-y8aqkkbOYo4q"
    >
      <h3
        class="s-y8aqkkbOYo4q"
      >
        My favourites
      </h3>
       
      <h4
        slot="details"
      >
        3 tracks
      </h4>
    </header>
  </span>
  <!--&lt;GridItem&gt;-->
  <!--&lt;Playlist&gt;-->
</div>
`;

exports[`Single track 1`] = `
<div>
   
  <span
    class="s-y8aqkkbOYo4q overlay"
    role="tab"
    tabindex="0"
  >
    <div
      class="content s-y8aqkkbOYo4q"
    >
      <span
        class="artwork s-y8aqkkbOYo4q"
      />
       
      <p
        class="controls s-y8aqkkbOYo4q"
      >
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="play"
        >
          <i
            class="icons i-mdi-play s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="enqueue"
        >
          <i
            class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
      </p>
    </div>
     
    <header
      class="s-y8aqkkbOYo4q"
    >
      <h3
        class="s-y8aqkkbOYo4q"
      >
        My favourites
      </h3>
       
      <h4
        slot="details"
      >
        1 track
      </h4>
    </header>
  </span>
  <!--&lt;GridItem&gt;-->
  <!--&lt;Playlist&gt;-->
</div>
`;
